# Madlib-Generator

./: .env.example  .gitignore  CONTRIBUTING.md  README-upgraded.md  README.md  madlib generator.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ADR.md
src/madlib_generator/: __init__.py  app.py  core.py  settings.py  templates.py  ui.py
tests/: test_core.py  test_settings_and_app.py  test_ui_logic.py
