[build-system]
requires = ['setuptools>=69', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'madlib-generator'
version = '1.0.0'
description = 'A refreshed desktop madlib app built with Tkinter.'
readme = 'README.md'
requires-python = '>=3.11'
authors = [{ name = 'OpenAI' }]
keywords = ['madlib', 'tkinter', 'desktop-app', 'word-game']
classifiers = [
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Operating System :: OS Independent',
]

[project.scripts]
madlib-generator = 'madlib_generator.app:main'

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
minversion = '8.0'
addopts = '-q --tb=short --cov=src --cov-report=term-missing --cov-fail-under=90'
testpaths = ['tests']

[tool.ruff]
line-length = 88
target-version = 'py311'

[tool.ruff.lint]
select = ['E', 'F', 'I']

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
line-ending = 'lf'
